--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,6 @@
 cmake_minimum_required(VERSION 3.0.2)
 project(trajectory_generation)
 
-## Find catkin macros and libraries
-## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
-## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
   roscpp
   nodelet
@@ -17,10 +14,9 @@ find_package(catkin REQUIRED COMPONENTS
   )
 
 generate_dynamic_reconfigure_options(
-  cfg/trajectory_generation.cfg
+  config/drs.cfg
   )
 
-#Find Eigen libraries
 find_package(Eigen3 REQUIRED)
 set(Eigen_INCLUDE_DIRS ${EIGEN3_INCLUDE_DIRS})
 set(Eigen_LIBRARIES ${Eigen_LIBRARIES})
@@ -31,10 +27,6 @@ catkin_package(
   CATKIN_DEPENDS roscpp mrs_lib mrs_msgs geometry_msgs nav_msgs mav_msgs dynamic_reconfigure nlopt
   DEPENDS Eigen
   )
-
-###########
-## Build ##
-###########
 
 add_library(TrajectoryGeneration
   src/motion_defines.cpp
@@ -47,8 +39,6 @@ add_library(TrajectoryGeneration
   src/rpoly/rpoly_ak1.cpp
   )
 
-## Specify additional locations of header files
-## Your package locations should be listed before other locations
 include_directories(
   include
   ${catkin_INCLUDE_DIRS}
@@ -56,10 +46,8 @@ include_directories(
   ${dynamic_reconfigure_PACKAGE_PATH}/cmake/cfgbuild.cmake
   )
 
-## Declare a C++ library
 add_library(TrajectoryGenerationNodelet src/trajectory_generation.cpp)
 
-## Specify libraries to link a library or executable target against
 target_link_libraries(TrajectoryGenerationNodelet
   TrajectoryGeneration
   ${catkin_LIBRARIES}
