--- a/paths/example.yaml
+++ b/paths/example.yaml
@@ -24,6 +24,18 @@ path: [
 
 # path: [
 #   # x, y, z, heading
+#   2.5, -2.5, 1.5, 0.0,
+#   5.0, 0.0, 1.5, 0.0,
+#   5.0, 5.0, 1.5, 0.0,
+#   20.0, 2.5, 1.5, 0.0,
+#   30.0, 5.0, 1.5, 0.0,
+#   40.0, 7.5, 1.5, 0.0,
+#   50.0, 0.0, 1.5, 0.0,
+#   2.5, -2.5, 1.5, 0.0,
+# ]
+
+# path: [
+#   # x, y, z, heading
 # ]
 
 # path: [
@@ -69,5 +81,5 @@ path: [
 # ]
 
 use_heading: true
-fly_now: true # tracker will fly it immediately after receiving
+fly_now: false # tracker will fly it immediately after receiving
 stop_at_waypoints: false
