--- a/paths/example.yaml
+++ b/paths/example.yaml
@@ -81,5 +81,5 @@ path: [
 # ]
 
 use_heading: true
-fly_now: false # tracker will fly it immediately after receiving
+fly_now: true # tracker will fly it immediately after receiving
 stop_at_waypoints: false
