--- a/config/drs.cfg
+++ b/config/drs.cfg
@@ -1,5 +1,5 @@
 #!/usr/bin/env python
-PACKAGE = "trajectory_generation"
+PACKAGE = "mrs_uav_trajectory_generation"
 
 import roslib;
 roslib.load_manifest(PACKAGE)
