--- a/config/drs.cfg
+++ b/config/drs.cfg
@@ -39,4 +39,4 @@ test = gen.add_group("Test");
 
 test.add("test", bool_t, 0, "Test", False)
 
-exit(gen.generate(PACKAGE, "TrajectoryGeneration", "drs"))
+exit(gen.generate(PACKAGE, "MrsTrajectoryGeneration", "drs"))
