--- a/paths/example.yaml
+++ b/paths/example.yaml
@@ -1,4 +1,4 @@
-frame_id: "gps_origin"
+frame_id: "uav1/gps_origin"
 
 # path: [
 #   # x, y, z, heading
@@ -9,18 +9,18 @@ frame_id: "gps_origin"
 #   0.0, 0.0, 1.5, 0.78,
 # ]
 
-path: [
-  # x, y, z, heading
-  0.0, 0.0, 1.5, 0.0,
-  10.0, 0.0, 1.5, 0.0,
-  20.0, 0.0, 1.5, 0.0,
-  30.0, 0.0, 1.5, 0.0,
-  30.0, 10.0, 1.5, 0.0,
-  40.0, 10.0, 1.5, 0.0,
-  40.0, 20.0, 1.5, 0.0,
-  0.0, 20.0, 1.5, 0.0,
-  0.0, 0.0, 1.5, 0.0,
-]
+# path: [
+#   # x, y, z, heading
+#   0.0, 0.0, 1.5, 0.0,
+#   10.0, 0.0, 1.5, 0.0,
+#   20.0, 0.0, 1.5, 0.0,
+#   30.0, 0.0, 1.5, 0.0,
+#   30.0, 10.0, 1.5, 0.0,
+#   40.0, 10.0, 1.5, 0.0,
+#   40.0, 20.0, 1.5, 0.0,
+#   0.0, 20.0, 1.5, 0.0,
+#   0.0, 0.0, 1.5, 0.0,
+# ]
 
 # path: [
 #   # x, y, z, heading
@@ -34,9 +34,11 @@ path: [
 #   2.5, -2.5, 1.5, 0.0,
 # ]
 
-# path: [
-#   # x, y, z, heading
-# ]
+path: [
+  # x, y, z, heading
+  0.0, 0.0, 1.5, 0.0,
+  10.0, 0.0, 1.5, 0.0,
+]
 
 # path: [
 #   # x, y, z, heading
