--- a/package.xml
+++ b/package.xml
@@ -18,7 +18,7 @@
   <depend>mrs_msgs</depend>
   <depend>std_msgs</depend>
   <depend>mrs_lib</depend>
-  <depend>nlopt</depend>
+  <depend>nlopt_ros</depend>
 
   <export>
     <nodelet plugin="${prefix}/nodelets.xml" />
