--- a/paths/example.yaml
+++ b/paths/example.yaml
@@ -1,87 +1,14 @@
 frame_id: "uav1/gps_origin"
 
-# path: [
-#   # x, y, z, heading
-#   0.0, 0.0, 1.5, 0.78,
-#   10.0, 0.0, 1.5, 2.35,
-#   10.0, 10.0, 1.5, 3.91,
-#   0.0, 10.0, 1.5, 5.48,
-#   0.0, 0.0, 1.5, 0.78,
-# ]
-
-# path: [
-#   # x, y, z, heading
-#   0.0, 0.0, 1.5, 0.0,
-#   10.0, 0.0, 1.5, 0.0,
-#   20.0, 0.0, 1.5, 0.0,
-#   30.0, 0.0, 1.5, 0.0,
-#   30.0, 10.0, 1.5, 0.0,
-#   40.0, 10.0, 1.5, 0.0,
-#   40.0, 20.0, 1.5, 0.0,
-#   0.0, 20.0, 1.5, 0.0,
-#   0.0, 0.0, 1.5, 0.0,
-# ]
-
-# path: [
-#   # x, y, z, heading
-#   2.5, -2.5, 1.5, 0.0,
-#   5.0, 0.0, 1.5, 0.0,
-#   5.0, 5.0, 1.5, 0.0,
-#   20.0, 2.5, 1.5, 0.0,
-#   30.0, 5.0, 1.5, 0.0,
-#   40.0, 7.5, 1.5, 0.0,
-#   50.0, 0.0, 1.5, 0.0,
-#   2.5, -2.5, 1.5, 0.0,
-# ]
-
 path: [
   # x, y, z, heading
-  0.0, 0.0, 1.5, 0.0,
-  10.0, 0.0, 1.5, 0.0,
+  0.0, 0.0, 1.5, 0.78,
+  10.0, 0.0, 1.5, 2.35,
+  10.0, 10.0, 1.5, 3.91,
+  0.0, 10.0, 1.5, 5.48,
+  0.0, 0.0, 1.5, 0.78,
 ]
 
-# path: [
-#   # x, y, z, heading
-#   0.0, 0.0, 1.5, 0.0,
-#   10.0, 0.0, 1.5, 0.0,
-#   0.0, 0.0, 1.5, 0.0,
-#   10.0, 0.0, 1.5, 0.0,
-#   0.0, 0.0, 1.5, 0.0,
-#   10.0, 0.0, 1.5, 0.0,
-#   0.0, 0.0, 1.5, 0.0,
-#   10.0, 0.0, 1.5, 0.0,
-#   0.0, 0.0, 1.5, 0.0,
-#   10.0, 0.0, 1.5, 0.0,
-#   0.0, 0.0, 1.5, 0.0,
-#   10.0, 0.0, 1.5, 0.0,
-#   0.0, 0.0, 1.5, 0.0,
-#   10.0, 0.0, 1.5, 0.0,
-#   0.0, 0.0, 1.5, 0.0,
-#   10.0, 0.0, 1.5, 0.0,
-#   0.0, 0.0, 1.5, 0.0,
-#   10.0, 0.0, 1.5, 0.0,
-#   0.0, 0.0, 1.5, 0.0,
-#   10.0, 0.0, 1.5, 0.0,
-# ]
-
-# path: [
-#  # x, y, z, heading
-#  -10.0, 0.0, 2, 0.0,
-#  0.0, 0.0, 2, 0.0,
-#  1.0, 0.0, 2, 0.0,
-#  2.0, 0.0, 2, 0.0,
-#  3.0, 0.0, 2, 0.0,
-#  4.0, 0.0, 2, 0.0,
-#  5.0, 0.0, 2, 0.0,
-#  6.0, 0.0, 2, 0.0,
-#  7.0, 0.0, 2, 0.0,
-#  8.0, 0.0, 2, 0.0,
-#  9.0, 0.0, 2, 0.0,
-#  10.0, 0.0, 2, 0.0,
-#  30.0, 0.0, 2, 0.0,
-#  00.0, 10.0, 2, 0.0,
-# ]
-
 use_heading: true
-fly_now: true # tracker will fly it immediately after receiving
+fly_now: false # tracker will fly it immediately after receiving
 stop_at_waypoints: false
