--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,9 @@ find_package(catkin REQUIRED COMPONENTS
   nlopt_ros
   )
 
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
 generate_dynamic_reconfigure_options(
   config/drs.cfg
   )
@@ -53,5 +56,3 @@ target_link_libraries(MrsTrajectoryGeneration
   ${catkin_LIBRARIES}
   ${Eigen_LIBRARIES}
   )
-
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
