--- a/package.xml
+++ b/package.xml
@@ -2,13 +2,13 @@
 <package format="2">
 
   <name>mrs_uav_trajectory_generation</name>
-  <version>1.0.0</version>
+  <version>0.9.9</version>
   <description>UAV trajectory generation</description>
 
   <author email="tomas.baca@fel.cvut.cz">Tomas Baca</author>
   <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>
 
-  <license>TODO</license>
+  <license>Apache 2.0</license>
 
   <buildtool_depend>catkin</buildtool_depend>
 
