--- a/config/default.yaml
+++ b/config/default.yaml
@@ -19,10 +19,21 @@ add_noise:
   max: 0.30 # [m] # +max, -max of flat distribution
 
 # while checking the final trajectory, don't allow
-# returning results which are n-times longer / shorter that
+# returning results which are n-times longer / shorter than
 # the initial 'baca' prediction of the length
-max_trajectory_len_factor: 3.0
-min_trajectory_len_factor: 0.33
+max_trajectory_len_factor: 3.0 # [-]
+min_trajectory_len_factor: 0.33 # [-]
+
+# how many times to try the plannin + sampling if the sampling fails?
+n_attempts: 3 # [-]
+
+# if the generation and sampling fails completely and the result is infeasible
+# should we at least provide a naive constant-velocity solution which will
+# move the drone and therefore avoid potential deadlocks?
+fallback_sampling:
+  enabled: true
+  accel_factor: 1.0 # how fast when comparing to constraints
+  speed_factor: 1.0 # how fast when comparing to constraints
 
 time_penalty: 100
 soft_constraints_enabled: true
