--- a/config/default.yaml
+++ b/config/default.yaml
@@ -3,7 +3,7 @@ check_trajectory_deviation:
   enabled: true
   max_deviation: 0.05 # [m]
   max_iterations: 6 # [-]
-  first_segment: true
+  first_segment: false
 
 # Allows to neglect waypoints in the original path if the new path
 # does not violate max distance from the original path.
