--- a/config/drs.cfg
+++ b/config/drs.cfg
@@ -22,7 +22,7 @@ derivative_enum = gen.enum([gen.const("acc", int_t, 0, "acc"),
                            gen.const("snap", int_t, 2, "snap")],
                            "Derivative to optimize")
 
-
+general.add("enforce_fallback_solver", bool_t, 0, "Enforce Fallback", False)
 general.add("time_penalty", double_t, 0, "Time penalty", 500.0, 0.0, 1000000.0)
 general.add("time_allocation", int_t, 0, "Time allocation", 0, 0, 4, edit_method=method_enum)
 general.add("derivative_to_optimize", int_t, 0, "Derivative to optimize", 0, 0, 2, edit_method=derivative_enum)
