--- a/config/default.yaml
+++ b/config/default.yaml
@@ -40,12 +40,17 @@ n_attempts: 3 # [-]
 # should we at least provide a naive constant-velocity solution which will
 # move the drone and therefore avoid potential deadlocks?
 fallback_sampling:
+
   enabled: true
   accel_factor: 1.00 # how fast when comparing to constraints
   speed_factor: 1.00 # how fast when comparing to constraints
 
   # when stopping at waypoints, stop for this time
   stopping_time: 2.0 # [s]
+
+  # when in motion, the first waypoint segment will be longer
+  # to allow transition from initial conditions
+  first_waypoint_additional_stop: true
 
 # optimizer parameters, usually left alone
 time_penalty: 100
