--- a/config/default.yaml
+++ b/config/default.yaml
@@ -17,8 +17,8 @@ check_trajectory_deviation:
 # trajectory generator to work with.
 path_straightener:
   enabled: true
-  max_deviation: 0.05 # [m]
-  max_hdg_deviation: 0.1 # [rad]
+  max_deviation: 1.0 # [m]
+  max_hdg_deviation: 0.2 # [rad]
 
 # waypoints too close to each other cause issues in the optimization
 # the incoming path is preprocessed, such waypoints are neglected
@@ -41,7 +41,7 @@ n_attempts: 3 # [-]
 # move the drone and therefore avoid potential deadlocks?
 fallback_sampling:
 
-  enabled: false
+  enabled: true
   accel_factor: 0.75 # how fast when comparing to constraints
   speed_factor: 0.75 # how fast when comparing to constraints
 
