--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,3 +3,5 @@ find_package(rostest REQUIRED)
 add_subdirectory(service_fly_now)
 
 add_subdirectory(topic_fly_now)
+
+add_subdirectory(fallback_sampling)
