added tests for getPath srv

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -7,3 +7,7 @@ add_subdirectory(topic_fly_now)
 add_subdirectory(fallback_sampling)
 
 add_subdirectory(path_before_takeoff)
+
+add_subdirectory(get_path_before_takeoff)
+
+add_subdirectory(get_path_after_takeoff)
