added more control options to the service/topic

--- a/config/drs.cfg
+++ b/config/drs.cfg
@@ -29,7 +29,8 @@ general.add("derivative_to_optimize", int_t, 0, "Derivative to optimize", 0, 0, 
 general.add("inequality_constraint_tolerance", double_t, 0, "Ineq. const. tolerance", 0.0, 0.0, 1000000.0)
 general.add("equality_constraint_tolerance", double_t, 0, "Eq. const. tolerance", 0.0, 0.0, 1000000.0)
 general.add("max_iterations", int_t, 0, "Max iter.", 0, 0, 1000000)
-general.add("max_time", double_t, 0, "Max time", 0, 0, 10.0)
+general.add("max_execution_time", double_t, 0, "Max execution time", 0, 0, 10.0)
+general.add("max_deviation", double_t, 0, "Max deviation", 0, 0, 100.0)
 
 soft = gen.add_group("Soft constraints");
 
