updated the test format

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 add_definitions(-Wall)
 add_definitions(-Wextra)
 
-if(NOT TESTING)
+if(NOT MRS_ENABLE_TESTING)
   add_definitions(-O3)
 endif()
 
@@ -103,7 +103,9 @@ target_link_libraries(MrsUavTrajectoryGeneration_PathRandomFlier
 ## |                           Testing                          |
 ## --------------------------------------------------------------
 
-if(CATKIN_ENABLE_TESTING)
+if(CATKIN_ENABLE_TESTING AND MRS_ENABLE_TESTING)
+
+  message(WARNING "Testing enabled.")
 
   add_subdirectory(test)
 
