fixed repeated takeoff with initial point

--- a/tmux/before_takeoff/config/custom_config.yaml
+++ b/tmux/before_takeoff/config/custom_config.yaml
@@ -6,6 +6,10 @@ mrs_uav_managers:
       after_takeoff:
         controller: "Se3Controller"
 
+    landing:
+
+      disarm: false
+
   constraint_manager:
 
     default_constraints:
